--- a/customer/src/components/Signup/SignupForm.module.scss
+++ b/customer/src/components/Signup/SignupForm.module.scss
@@ -43,7 +43,7 @@
     padding: 0 20px;
 
     &:first-child {
-      margin-bottom: 40px;
+      margin-bottom: 20px;
     }
   }
 }
@@ -75,6 +75,17 @@
     border-radius: 5px;
     margin-bottom: 20px;
     padding: 15px 10px 5px;
+    transition: all 0.3s ease-in-out;
+
+    &:focus {
+      background: #ffffff;
+      border: 1px solid rgba(97, 72, 28, 0.5);
+      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+    }
+
+    @include devices(md) {
+      margin-bottom: 10px;
+    }
   }
 
   button {
@@ -89,6 +100,10 @@
     &:hover {
       background: #a47e3b;
       text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
+    @include devices(md) {
+      font-size: 16px;
     }
   }
 
@@ -105,10 +120,14 @@
 
     label {
       color: #bf9742;
-      font-size: 16px;
+      font-size: 15px;
       line-height: 1;
       position: initial;
       margin-left: 10px;
+    }
+
+    @include devices(md) {
+      margin-top: 10px;
     }
   }
 }
