--- a/customer/src/theme/_variables.scss
+++ b/customer/src/theme/_variables.scss
@@ -4,5 +4,6 @@ $FM_HEADER_HEIGHT_MD: 60px;
 $FM_HEADER_HEIGHT_XS: 50px;
 
 // Footer
-$FM_FOOTER_HEIGHT: 105px;
-$FM_FOOTER_HEIGHT_MD: 197px;
+$FM_FOOTER_HEIGHT: 65px;
+$FM_FOOTER_HEIGHT_MD: 134px;
+$FM_FOOTER_HEIGHT_XS: 124px;
