--- a/customer/src/components/Register/RegisterForm.module.scss
+++ b/customer/src/components/Register/RegisterForm.module.scss
@@ -78,9 +78,9 @@
     transition: all 0.3s ease-in-out;
 
     &:focus {
-      background: #ffffff;
-      border: 1px solid rgba(97, 72, 28, 0.5);
-      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+      // background: #ffffff;
+      // border: 1px solid rgba(97, 72, 28, 0.5);
+      // box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
     }
 
     @include devices(md) {
