--- a/customer/src/theme/_variables.scss
+++ b/customer/src/theme/_variables.scss
@@ -7,3 +7,8 @@ $FM_HEADER_HEIGHT_XS: 50px;
 $FM_FOOTER_HEIGHT: 65px;
 $FM_FOOTER_HEIGHT_MD: 134px;
 $FM_FOOTER_HEIGHT_XS: 124px;
+
+// Colors & shadows
+$FM_TEXT_BROWN: #61481c;
+$FM_TITLE_SHADOW: 0px 2px 2px rgba(0, 0, 0, 0.25);
+$FM_BUTTON_SHADOW: 0px 4px 4px rgba(0, 0, 0, 0.25);
