--- a/customer/src/components/Otp/OtpContainer.module.scss
+++ b/customer/src/components/Otp/OtpContainer.module.scss
@@ -1,7 +1,16 @@
 @import "../../theme/_variables.scss";
+@import "../../theme/_mixins.scss";
 
 .container {
-  overflow-x: hidden;
   min-height: calc(100vh - $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT);
-  padding: 40px 0 !important;
+  padding: 60px 0;
+
+  @include devices(md) {
+    min-height: calc(100vh - $FM_HEADER_HEIGHT_MD - $FM_FOOTER_HEIGHT_MD);
+    padding: 40px 0;
+  }
+
+  @include devices(xs) {
+    min-height: calc(100vh - $FM_HEADER_HEIGHT_XS - $FM_FOOTER_HEIGHT_XS);
+  }
 }
