--- a/customer/src/components/Register/RegisterContainer.module.scss
+++ b/customer/src/components/Register/RegisterContainer.module.scss
@@ -2,12 +2,14 @@
 @import "../../theme/_mixins.scss";
 
 .container {
-  overflow-x: hidden;
   min-height: calc(100vh - $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT);
-  padding: 40px 0 !important;
+  padding: 40px 0;
 
   @include devices(md) {
-    min-height: auto;
-    padding: 60px 0;
+    min-height: calc(100vh - $FM_HEADER_HEIGHT_MD - $FM_FOOTER_HEIGHT_MD);
+  }
+
+  @include devices(xs) {
+    min-height: calc(100vh - $FM_HEADER_HEIGHT_XS - $FM_FOOTER_HEIGHT_XS);
   }
 }
