--- a/rider/src/components/Home/LoginImage.module.scss
+++ b/rider/src/components/Home/LoginImage.module.scss
@@ -1,14 +1,14 @@
 @import "../../theme/_mixins.scss";
 
-.image {
-  margin-right: 40px;
-  height: 500px;
+// .images {
+//   margin-right: 40px;
+//   height: 500px;
 
-  @include devices(sm) {
-    max-width: 300px;
-  }
+//   @include devices(sm) {
+//     max-width: 300px;
+//   }
 
-  @include devices(xs) {
-    max-width: 250px;
-  }
-}
+//   @include devices(xs) {
+//     max-width: 250px;
+//   }
+// }
