--- a/rider/src/components/Home/LoginImage.module.scss
+++ b/rider/src/components/Home/LoginImage.module.scss
@@ -1,14 +1,34 @@
 @import "../../theme/_mixins.scss";
 
-// .images {
-//   margin-right: 40px;
-//   height: 500px;
+.images {
+  position: relative;
+  margin-top: 200px;
 
-//   @include devices(sm) {
-//     max-width: 300px;
-//   }
+  .image1 {
+    position: relative;
+    width: 300px;
+    height: 320px;
+    opacity: 0.25;
+    top: -170px;
+    left: 0;
 
-//   @include devices(xs) {
-//     max-width: 250px;
-//   }
-// }
+    @media (max-width: 425px) {
+      width: 200px;
+      height: 200px;
+    }
+  }
+
+  .image2 {
+    position: absolute;
+    width: 650px;
+    height: 500px;
+    top: -240px;
+    left: -170px;
+
+    @media (max-width: 425px) {
+      width: 550px;
+      height: 380px;
+      left: -180px;
+    }
+  }
+}
