Updated rider header, footer for login

--- a/rider/src/components/Header/Header.module.scss
+++ b/rider/src/components/Header/Header.module.scss
@@ -2,10 +2,11 @@
 @import "../../theme/_mixins.scss";
 
 .header {
-  box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.25);
-  width: 100%;
-  height: $FM_HEADER_HEIGHT;
-
+  @media (min-width: 768px) {
+    box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.25);
+    width: 100%;
+    height: $FM_HEADER_HEIGHT;
+  }
   @include devices(md) {
     height: $FM_HEADER_HEIGHT_MD;
   }
@@ -22,6 +23,16 @@
 .logo {
   height: 50px;
   position: relative;
+
+  @media (width: 320px) {
+    margin-right: 50px;
+  }
+  @media (width: 375px) {
+    margin-right: 105px;
+  }
+  @media (width: 425px) {
+    margin-right: 150px;
+  }
 
   a {
     img {
@@ -60,8 +71,6 @@
 }
 
 .location {
-  margin-left: 30px;
-
   a {
     transition: all 0.3s ease-in-out;
 
@@ -123,21 +132,8 @@
   }
 }
 
-.links {
-  a {
-    color: #61481c;
-    font-size: 20px;
-    font-weight: 400;
-    text-decoration: none;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
-    transition: all 0.3s ease-in-out;
-
-    &:hover {
-      opacity: 0.5;
-    }
-  }
-
-  :first-child {
-    margin-right: 30px;
+span {
+  @media (max-width: 425px) {
+    display: none;
   }
 }
