--- a/rider/src/components/Header/OffcanvasMenu.module.scss
+++ b/rider/src/components/Header/OffcanvasMenu.module.scss
@@ -17,13 +17,13 @@
   }
 }
 
-.burger {
-  background: #e6b325;
-  border: 0.5px solid #61481c;
-  border-radius: 3px;
-  cursor: pointer;
-  line-height: 1;
-}
+// .burger {
+//   background: #e6b325;
+//   border: 0.5px solid #61481c;
+//   border-radius: 3px;
+//   cursor: pointer;
+//   line-height: 1;
+// }
 
 .menu {
   margin: 0;
