--- a/customer/src/components/Otp/OtpForm.module.scss
+++ b/customer/src/components/Otp/OtpForm.module.scss
@@ -30,6 +30,7 @@
 
 .form {
   input {
+    background-color: transparent;
     border: none;
     border-bottom: 4px solid $FM_TEXT_BROWN;
     border-radius: 0;
@@ -40,6 +41,7 @@
     padding: 0;
 
     &:focus {
+      background-color: transparent;
       border-bottom: 4px solid $FM_TEXT_BROWN;
       box-shadow: none;
     }
@@ -62,7 +64,8 @@
   color: $FM_TEXT_BROWN;
   font-size: 16px;
   font-weight: 300;
-  padding: 6px 70px;
+  width: 180px;
+  padding: 6px;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
 
