--- a/rider/src/components/Account/Profile/ProfileContainer.module.scss
+++ b/rider/src/components/Account/Profile/ProfileContainer.module.scss
@@ -2,16 +2,22 @@
 @import "../../../theme/_mixins.scss";
 
 .container {
+  overflow-x: hidden;
   min-height: calc(100vh - $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT);
   padding: 40px 0;
+
+  @include devices(md) {
+    min-height: auto;
+    margin-bottom: -190px + $FM_FOOTER_HEIGHT_MD;
+  }
 }
 
 .navigationContainer,
 .contentContainer {
   background: #f2f2f2;
   border: 1px solid #000000;
-  height: 100%;
   padding: 30px 20px;
+  height: 766px;
 }
 
 .contentContainer {
