--- a/rider/src/components/Account/Profile/ProfileContent.scss
+++ b/rider/src/components/Account/Profile/ProfileContent.scss
@@ -1,6 +1,6 @@
 .profile-content-container {
   .right h3 {
-    padding: 25px;
+    padding: 15px;
   }
 
   .right form {
@@ -35,6 +35,7 @@
     border: 0.5px solid #61481c;
     border-radius: 10px;
     width: 300px;
+    height: 40px;
     padding: 1em 2em;
   }
 
@@ -62,6 +63,7 @@
     border: 0.5px solid #61481c;
     border-radius: 10px;
     width: 300px;
+    height: 40px;
     padding: 1em 2em;
   }
 
@@ -90,6 +92,9 @@
     font-weight: 600;
     font-size: 15px;
     line-height: 24px;
+  }
+
+  .bike-images {
   }
 
   .right .buttons {
@@ -124,12 +129,6 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     text-decoration: none;
-  }
-
-  .bike-images {
-    display: flex;
-    gap: 15px;
-    margin-top: 25px;
   }
 
   .bike-images img {
