Added conditional header & page styles depending on current page

--- a/customer/src/theme/_variables.scss
+++ b/customer/src/theme/_variables.scss
@@ -1,7 +1,9 @@
 // Header
 $FM_HEADER_HEIGHT: 90px;
 $FM_HEADER_HEIGHT_MD: 60px;
+$FM_HEADER_BASIC_HEIGHT_MD: 90px;
 $FM_HEADER_HEIGHT_XS: 50px;
+$FM_HEADER_BASIC_HEIGHT_XS: 85px;
 
 // Footer
 $FM_FOOTER_HEIGHT: 65px;
