--- a/customer/src/App.scss
+++ b/customer/src/App.scss
@@ -30,6 +30,7 @@
 
 html {
   scroll-behavior: auto !important;
+  overflow-x: hidden;
 }
 
 body {
@@ -38,11 +39,9 @@ body {
 
 .page {
   margin-top: $FM_HEADER_HEIGHT;
-  // margin-bottom: $FM_FOOTER_HEIGHT + 40px;
 
   @include devices(md) {
     margin-top: $FM_HEADER_HEIGHT_MD;
-    // margin-bottom: $FM_FOOTER_HEIGHT_MD + 20px;
   }
 
   @include devices(xs) {
@@ -50,16 +49,19 @@ body {
   }
 }
 
-.registerPage {
+.custom-header {
   @include devices(md) {
-    header {
-      display: none !important;
+    .page {
+      margin-top: 0;
     }
+  }
+}
 
+.custom-bg {
+  @include devices(md) {
+    header,
     .page {
       background: #e3d7c2;
-      margin-top: 0;
-      margin-bottom: 0;
     }
   }
 }
