--- a/customer/src/components/Login/LoginContainer.module.scss
+++ b/customer/src/components/Login/LoginContainer.module.scss
@@ -6,10 +6,10 @@
   padding: 40px 0;
 
   @include devices(md) {
-    min-height: calc(100vh - $FM_HEADER_HEIGHT_MD - $FM_FOOTER_HEIGHT_MD);
+    min-height: calc(100vh - $FM_HEADER_BASIC_HEIGHT_MD - $FM_FOOTER_HEIGHT_MD);
   }
 
   @include devices(xs) {
-    min-height: calc(100vh - $FM_HEADER_HEIGHT_XS - $FM_FOOTER_HEIGHT_XS);
+    min-height: calc(100vh - $FM_HEADER_BASIC_HEIGHT_XS - $FM_FOOTER_HEIGHT_XS);
   }
 }
