--- a/rider/src/components/Account/Profile/ProfileContent.scss
+++ b/rider/src/components/Account/Profile/ProfileContent.scss
@@ -1,4 +1,7 @@
 .profile-content-container {
+  @media (max-width: 768px) {
+    text-align: center;
+  }
   .right h3 {
     padding: 15px;
   }
@@ -6,107 +9,45 @@
   .right form {
     left: 0px;
     top: 0px;
-  }
-
-  .right textarea {
-    resize: none;
-    top: 21px;
-    radius: 10px;
-    background: #dddcdc;
-    border: 0.5px solid #61481c;
-    border-radius: 10px;
-  }
-
-  .right .restoInfo1 {
-    display: grid;
-    grid-template-columns: auto;
-    align-items: center;
-    justify-content: left;
-    margin-left: 74px;
-    padding: 5px;
-  }
-
-  .right .restoInfo1 label {
-    font-size: 15px;
-  }
-
-  .right .restoInfo1 input {
-    background: #dddcdc;
-    border: 0.5px solid #61481c;
-    border-radius: 10px;
-    width: 300px;
-    height: 40px;
-    padding: 1em 2em;
-  }
-
-  .right .restoInfo1 .restoInfo1-div {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-  }
-
-  .right .restoInfo2 {
-    display: grid;
-    grid-template-columns: auto auto;
-    width: 90%;
     padding: 20px;
-    margin-left: 58px;
-    gap: 5px;
-  }
 
-  .right .restoInfo2 label {
-    font-size: 15px;
-  }
+    label {
+      font-weight: 300;
+      font-size: 15px;
+      line-height: 20px;
+    }
 
-  .right .restoInfo2 input {
-    background: #dddcdc;
-    border: 0.5px solid #61481c;
-    border-radius: 10px;
-    width: 300px;
-    height: 40px;
-    padding: 1em 2em;
-  }
+    input {
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 24px;
 
-  .right .restoInfo2 .restoInfo2-div {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .right .restoInfo1 input::placeholder {
-    color: black;
-    font-weight: 600;
-    font-size: 15px;
-    line-height: 24px;
-  }
-
-  .right .restoInfo1 textarea::placeholder {
-    color: black;
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 20px;
-    padding: 1em;
-  }
-
-  .right .restoInfo2 input::placeholder {
-    color: black;
-    font-weight: 600;
-    font-size: 15px;
-    line-height: 24px;
-  }
-
-  .bike-images {
+      background: #dddcdc;
+      border: 0.5px solid #61481c;
+      border-radius: 10px;
+    }
+    ::placeholder {
+      font-weight: 600;
+      font-size: 15px;
+      line-height: 20px;
+      color: black;
+    }
   }
 
   .right .buttons {
-    float: right;
-    margin-top: 20px;
-    margin-right: 80px;
+    justify-content: center;
+    align-items: center;
     display: flex;
     gap: 20px;
 
     text-transform: uppercase;
     cursor: pointer;
     font-size: 12px;
+
+    @media (min-width: 1024px) {
+      float: right;
+      padding-top: 20px;
+    }
   }
 
   .right .buttons #editBtn {
@@ -118,6 +59,10 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     text-decoration: none;
+
+    @media (width: 320px) {
+      padding: 0.5em 3em;
+    }
   }
 
   .right .buttons #saveBtn {
@@ -129,9 +74,27 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     text-decoration: none;
+
+    @media (width: 320px) {
+      padding: 0.5em 3em;
+    }
   }
 
-  .bike-images img {
-    width: 80px;
+  .bike-images {
+    padding-bottom: 20px;
+
+    @media (max-width: 768px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    img {
+      width: 80px;
+      height: 80px;
+      overflow: hidden;
+      @media (max-width: 768px) {
+        height: 70px;
+      }
+    }
   }
 }
