--- a/rider/src/components/Account/Profile/ProfileContent.scss
+++ b/rider/src/components/Account/Profile/ProfileContent.scss
@@ -31,6 +31,10 @@
       font-size: 15px;
       line-height: 20px;
       color: black;
+
+      @media (max-width: 768px) {
+        text-align: center;
+      }
     }
   }
 
@@ -60,8 +64,8 @@
     border-radius: 5px;
     text-decoration: none;
 
-    @media (width: 320px) {
-      padding: 0.5em 3em;
+    @media (max-width: 425px) {
+      padding: 0.5em 2em;
     }
   }
 
@@ -75,8 +79,8 @@
     border-radius: 5px;
     text-decoration: none;
 
-    @media (width: 320px) {
-      padding: 0.5em 3em;
+    @media (max-width: 425px) {
+      padding: 0.5em 2em;
     }
   }
 
@@ -92,8 +96,12 @@
       width: 80px;
       height: 80px;
       overflow: hidden;
-      @media (max-width: 768px) {
+      @media (width: 768px) {
         height: 70px;
+      }
+      @media (max-width: 425px) {
+        width: 60px;
+        height: 50px;
       }
     }
   }
