--- a/rider/src/components/Account/Profile/ProfileContent.scss
+++ b/rider/src/components/Account/Profile/ProfileContent.scss
@@ -85,7 +85,10 @@
   }
 
   .bike-images {
+    padding-top: 20px;
     padding-bottom: 20px;
+    display: flex;
+    gap: 10px;
 
     @media (max-width: 768px) {
       display: flex;
@@ -95,7 +98,7 @@
     img {
       width: 80px;
       height: 80px;
-      overflow: hidden;
+
       @media (width: 768px) {
         height: 70px;
       }
