Added horizontal scroll for table on Delivery Page

--- a/rider/src/components/Account/Delivery/DeliveryContent.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContent.scss
@@ -95,6 +95,11 @@
     table {
       border-collapse: separate;
       border-spacing: 0 15px;
+
+      //creates a horizontal scroll
+      display: block;
+      overflow-x: auto;
+      white-space: nowrap;
     }
 
     thead {
