--- a/rider/src/components/Account/Delivery/DeliveryContainer.module.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContainer.module.scss
@@ -2,8 +2,13 @@
 @import "../../../theme/_mixins.scss";
 
 .container {
+  overflow-x: hidden;
   min-height: calc(100vh - $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT);
   padding: 40px 0;
+  @include devices(md) {
+    min-height: auto;
+    margin-bottom: -26px + $FM_FOOTER_HEIGHT_MD;
+  }
 }
 
 .navigationContainer,
@@ -17,4 +22,7 @@
 .contentContainer {
   background-color: #fdf5e7;
   padding: 30px 0;
+  @media (max-width: 768px) {
+    height: 800px;
+  }
 }
