--- a/rider/src/components/Account/Delivery/DeliveryContent.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContent.scss
@@ -31,6 +31,64 @@
       display: flex;
       justify-content: space-between;
 
+      @media (max-width: 425px) {
+        padding: 0px;
+        padding-bottom: 10px;
+      }
+      .table-header-1 {
+        @media (max-width: 425px) {
+          display: flex;
+          align-items: center;
+          gap: 90px;
+        }
+        @media (width: 320px) {
+          display: flex;
+          align-items: center;
+          gap: 50px;
+        }
+
+        h3 {
+          @media (max-width: 425px) {
+            font-size: 15px;
+            padding-top: 10px;
+          }
+          @media (width: 320px) {
+            font-size: 15px;
+            padding-top: 10px;
+          }
+        }
+
+        .search {
+          input {
+            @media (max-width: 425px) {
+              width: 140px;
+              height: 20px;
+            }
+            @media (width: 375px) {
+              width: 120px;
+              height: 20px;
+            }
+            @media (width: 320px) {
+              width: 110px;
+              height: 20px;
+            }
+          }
+
+          img {
+            @media (max-width: 425px) {
+              width: 20px;
+              height: 20px;
+              top: 5px;
+            }
+            @media (width: 320px) {
+              width: 20px;
+              height: 20px;
+              top: 5px;
+            }
+          }
+        }
+      }
+
       h3 {
         margin-left: 20px;
         font-style: normal;
@@ -110,11 +168,27 @@
       font-size: 15px;
       line-height: 17px;
       color: white;
+
+      .test1 {
+        position: absolute;
+        background: #61481c;
+        border: 1px solid black;
+        width: 21%;
+      }
     }
 
     tbody {
       background: #fde9b1;
       border: 1px solid #000000;
+
+      .test2 {
+        position: absolute;
+        background: #a47e3b;
+        border: 1px solid black;
+        color: white;
+        width: 21%;
+        height: 43px;
+      }
 
       .status-icon {
         width: 30px;
@@ -201,7 +275,12 @@ td {
   justify-content: center;
   gap: 100px;
 
-  a {
+  @media (max-width: 425px) {
+    gap: 12px;
+    margin-top: 340px;
+  }
+
+  button {
     background: #d9d9d9;
     padding: 0.5em 2em;
     border: 0.5px solid rgba(97, 72, 28, 0.5);
@@ -211,5 +290,32 @@ td {
     font-size: 15px;
     line-height: 15px;
     cursor: pointer;
+  }
+}
+
+.bottom-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 140px;
+
+  @media (max-width: 425px) {
+    margin-top: 270px;
+  }
+
+  button {
+    background: #d9d9d9;
+    padding: 0.5em 2em;
+    border: 0.5px solid rgba(97, 72, 28, 0.5);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 15px;
+    cursor: pointer;
+
+    @media (max-width: 425px) {
+      font-size: 10px;
+    }
   }
 }
