--- a/customer/src/components/Restaurant/RestaurantContainer.module.scss
+++ b/customer/src/components/Restaurant/RestaurantContainer.module.scss
@@ -12,12 +12,19 @@
     > div:first-child {
       border-right: 1px solid #000000;
     }
+  }
 
-    @include devices(md) {
+  @include devices(md) {
+    padding: 20px 10px;
+
+    .innerContainer {
+      border: none;
       min-height: calc(100vh - $FM_HEADER_HEIGHT_MD - $FM_FOOTER_HEIGHT_MD);
     }
+  }
 
-    @include devices(xs) {
+  @include devices(xs) {
+    .innerContainer {
       min-height: calc(100vh - $FM_HEADER_HEIGHT_XS - $FM_FOOTER_HEIGHT_XS);
     }
   }
@@ -25,4 +32,8 @@
 
 .bgBrown {
   background-color: $FM_BG_BROWN;
+
+  @include devices(md) {
+    background-color: transparent;
+  }
 }
