--- a/rider/src/components/Account/Delivery/DeliveryContainer.module.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContainer.module.scss
@@ -8,11 +8,11 @@
   @include devices(md) {
     min-height: auto;
     margin-bottom: -26px + $FM_FOOTER_HEIGHT_MD;
+    padding: 0;
   }
 }
 
-.navigationContainer,
-.contentContainer {
+.navigationContainer {
   background: #f2f2f2;
   border: 1px solid #000000;
   height: 100%;
@@ -20,9 +20,23 @@
 }
 
 .contentContainer {
+  @media (min-width: 768px) {
+    border: 1px solid #000000;
+    height: 100%;
+    padding: 30px 20px;
+  }
+}
+
+.contentContainer {
   background-color: #fdf5e7;
   padding: 30px 0;
   @media (max-width: 768px) {
     height: 800px;
+  }
+}
+
+.bg {
+  @media (max-width: 425px) {
+    background-color: #fdf5e7;
   }
 }
