--- a/customer/src/components/Restaurant/Details.module.scss
+++ b/customer/src/components/Restaurant/Details.module.scss
@@ -185,7 +185,7 @@
   border-top: 1px solid #000000;
 
   > div {
-    // min-height: 155px;
+    min-height: 155px;
     width: 50%;
     padding: 10px 20px;
 
