--- a/rider/src/components/Account/Delivery/DeliveryContent.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContent.scss
@@ -158,7 +158,7 @@
       overflow-x: auto;
       white-space: nowrap;
     }
-
+    //Fixed first column
     thead {
       .test1 {
         position: sticky;
@@ -169,10 +169,9 @@
         left: 0px;
         background: #61481c;
         border: 1px solid black;
-        width: 21%;
       }
     }
-
+    //Fixed first column
     tbody {
       background: #fde9b1;
       border: 1px solid #000000;
@@ -187,7 +186,6 @@
         background: #a47e3b;
         border: 1px solid black;
         color: white;
-        width: 21%;
         height: 43px;
       }
 
@@ -361,4 +359,8 @@ td {
       }
     }
   }
+}
+
+.test-table {
+  transform: scale(0.85);
 }
