--- a/customer/src/components/Register/RegisterContainer.module.scss
+++ b/customer/src/components/Register/RegisterContainer.module.scss
@@ -7,6 +7,7 @@
 
   @include devices(md) {
     min-height: calc(100vh - $FM_HEADER_HEIGHT_MD - $FM_FOOTER_HEIGHT_MD);
+    padding-top: 20px;
   }
 
   @include devices(xs) {
