--- a/customer/src/components/Restaurant/Details.module.scss
+++ b/customer/src/components/Restaurant/Details.module.scss
@@ -6,176 +6,53 @@
 
 .top {
   padding: 10px 15px 15px;
-}
 
-.details {
-  color: $FM_TEXT_BROWN;
-  line-height: 1;
-
-  img {
-    border: 1px solid #61481c;
-    box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
-    height: 80px;
-  }
-
-  h3 {
-    font-size: 20px;
-  }
-
-  p {
-    font-size: 10px;
-  }
-}
-
-.buttons {
-  button {
-    box-shadow: $FM_BUTTON_SHADOW;
-    border: 0.5px solid #61481c;
-    border-radius: 5px;
-    font-size: 14px;
+  .details {
+    color: $FM_TEXT_BROWN;
     line-height: 1;
-    text-shadow: $FM_TEXT_SHADOW;
-    padding: 10px;
-    transition: $FM_TRANSITION;
 
-    &:hover {
+    .rating {
+      font-size: 0;
+      margin: 3px 0 10px;
+    }
+
+    img {
+      border: 1px solid #61481c;
+      box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+      height: 80px;
+    }
+
+    h3 {
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 10px;
+    }
+  }
+
+  .buttons {
+    button {
+      box-shadow: $FM_BUTTON_SHADOW;
       border: 0.5px solid #61481c;
-      opacity: 0.75;
-    }
-
-    &.btnPromos {
-      background-color: #bf9742;
-    }
-
-    &.btnDiscounts {
-      background-color: #868585;
-    }
-  }
-}
-
-.sliderContainer {
-  margin: 0 15px;
-  padding-bottom: 30px;
-
-  @include devices(md) {
-    height: 680px; /* height of slide item x 2 */
-
-    .swiperSlide {
-      height: calc((100% - 10px) / 2) !important;
-    }
-  }
-}
-
-.slideItem {
-  background-color: #ffffff;
-  border: 2px solid $FM_TEXT_BROWN;
-  border-radius: 10px;
-  box-shadow: $FM_BUTTON_SHADOW;
-  overflow: hidden;
-}
-
-.slideImageContainer {
-  border-bottom: 2px solid $FM_TEXT_BROWN;
-
-  img {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-  }
-}
-
-.slideContentContainer {
-  padding: 15px;
-
-  p {
-    color: #000;
-    margin-bottom: 0;
-
-    &.slideTitle {
-      font-size: 15px;
-      font-weight: 500;
-      line-height: 18px;
-      height: 18px;
-
-      /* Line clamp style for 2 lines */
-      display: -webkit-box;
-      -webkit-line-clamp: 1;
-      -webkit-box-orient: vertical;
-      text-overflow: ellipsis;
-      overflow: hidden;
-    }
-
-    &.slideDescription {
-      font-size: 14px;
-      line-height: 17px;
-      height: 34px;
-
-      /* Line clamp style for 2 lines */
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      text-overflow: ellipsis;
-      overflow: hidden;
-    }
-
-    &.slidePrice {
-      font-size: 15px;
-      font-weight: 500;
-      line-height: 18px;
-      margin: 15px 0 20px;
-    }
-  }
-
-  .slideOptions {
-    > div {
-      width: 47%;
-    }
-
-    .qty {
-      background: #dedede;
-      border: 0.5px solid #6b6b6a;
-      box-shadow: $FM_SHADOW;
       border-radius: 5px;
-      height: 30px;
+      font-size: 14px;
+      line-height: 1;
+      text-shadow: $FM_TEXT_SHADOW;
+      padding: 10px;
+      transition: $FM_TRANSITION;
 
-      button {
-        background: none;
-        border: none;
-        color: $FM_TEXT_BROWN;
-        font-size: 0px;
-        line-height: 0;
-        padding: 0;
+      &:hover {
+        border: 0.5px solid #61481c;
+        opacity: 0.75;
       }
 
-      span {
-        color: $FM_TEXT_BROWN;
-        cursor: default;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 1;
-        width: 18px;
-        text-align: center;
+      &.btnPromos {
+        background-color: #bf9742;
       }
-    }
 
-    .addToCart {
-      button {
-        background-color: $FM_BG_YELLOW;
-        border: 0.5px solid $FM_TEXT_BROWN;
-        color: #ffffff;
-        font-size: 10px;
-        font-weight: 500;
-        height: 30px;
-        line-height: 1;
-        padding: 0;
-        text-shadow: $FM_TEXT_SHADOW;
-        text-transform: uppercase;
-        width: 100%;
-        transition: $FM_TRANSITION;
-
-        &:hover {
-          opacity: 0.75;
-        }
+      &.btnDiscounts {
+        background-color: #868585;
       }
     }
   }
@@ -183,64 +60,151 @@
 
 .bottom {
   border-top: 1px solid #000000;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 
   > div {
-    min-height: 155px;
+    min-height: 150px;
     width: 50%;
     padding: 10px 20px;
+  }
+}
 
-    &.checkout {
-      background-color: #d9d5d5;
-      font-size: 15px;
-      line-height: 1.4;
+.checkout {
+  background-color: #d9d5d5;
+  font-size: 15px;
+  line-height: 1.4;
 
-      strong {
-        font-weight: 500;
+  strong {
+    font-weight: 500;
+  }
+
+  .total {
+    background: $FM_BG_YELLOW;
+    border: 1px solid $FM_TEXT_BROWN;
+    border-radius: 5px;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-top: 5px;
+  }
+
+  button,
+  a {
+    border: 1px solid #584016;
+    border-radius: 5px;
+    display: block;
+    color: #000000;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 45px;
+    height: 45px;
+    padding: 0;
+    transition: $FM_TRANSITION;
+    text-align: center;
+    text-decoration: none;
+
+    &.btnCheckout {
+      background-color: $FM_BG_YELLOW;
+    }
+
+    &.btnCancel {
+      background-color: #bf9520;
+      color: #000000;
+    }
+
+    &:active,
+    &:focus {
+      border: 1px solid #584016;
+      color: #000000;
+    }
+
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+}
+
+@include devices(md) {
+  .bottom {
+    position: initial;
+  }
+}
+
+@include devices(sm) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .categories {
+    order: 0;
+    margin-top: 20px;
+  }
+
+  .menu {
+    order: 1;
+  }
+
+  .bottom {
+    order: 2;
+  }
+
+  .top {
+    order: 3;
+    background-color: #2c2c2c;
+    padding: 20px;
+
+    .details {
+      color: #d9d9d9;
+
+      img {
+        background-color: #ffffff;
       }
+    }
+  }
 
-      .total {
-        background: $FM_BG_YELLOW;
-        border: 1px solid $FM_TEXT_BROWN;
-        border-radius: 5px;
-        font-size: 18px;
-        line-height: 1.6;
-        margin-top: 5px;
-      }
+  .bottom {
+    align-items: unset !important;
+    border: none;
 
-      button,
-      a {
-        border: 1px solid #584016;
-        border-radius: 5px;
-        display: block;
-        color: #000000;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 45px;
-        height: 45px;
-        padding: 0;
-        transition: $FM_TRANSITION;
-        text-align: center;
-        text-decoration: none;
+    h5 {
+      font-size: 16px;
+      margin-bottom: 15px;
+      text-align: center;
+    }
 
-        &.btnCheckout {
-          background-color: $FM_BG_YELLOW;
-        }
+    > div {
+      min-height: initial;
+      padding: 10px;
+    }
+  }
 
-        &.btnCancel {
-          background-color: #bf9520;
-          color: #000000;
-        }
+  .cart {
+    background-color: #e3d7c2;
+    justify-content: unset !important;
+  }
 
-        &:active,
-        &:focus {
-          border: 1px solid #584016;
-          color: #000000;
-        }
+  .checkout {
+    font-size: 13px;
 
-        &:hover {
-          opacity: 0.7;
-        }
-      }
+    .orderedAmountRow {
+      margin-bottom: 8px;
+    }
+
+    .total {
+      background: #ffffff;
+      font-size: 1em;
+      line-height: 1.8;
+      margin: 15px -3px 20px;
+    }
+
+    button,
+    a {
+      font-size: 12px;
+      flex: 50%;
+      line-height: 28px;
+      height: 28px;
     }
   }
 }
