--- a/rider/src/components/Account/Delivery/DeliveryContainer.module.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContainer.module.scss
@@ -7,7 +7,7 @@
   padding: 40px 0;
   @include devices(md) {
     min-height: auto;
-    // margin-bottom: -26px + $FM_FOOTER_HEIGHT_MD;
+    margin-bottom: -175px + $FM_FOOTER_HEIGHT_MD;
     padding: 0;
   }
 }
