--- a/rider/src/components/Registration/RegistrationContainer.module.scss
+++ b/rider/src/components/Registration/RegistrationContainer.module.scss
@@ -19,6 +19,6 @@ html {
   @include devices(md) {
     min-height: auto;
     padding: 60px 0;
-    // margin-bottom: $FM_FOOTER_HEIGHT_MD;
+    margin-bottom: 0px - $FM_FOOTER_HEIGHT_MD;
   }
 }
