--- a/rider/src/components/Registration/RegistrationContainer2.module.scss
+++ b/rider/src/components/Registration/RegistrationContainer2.module.scss
@@ -10,7 +10,7 @@ html {
 .container {
   overflow-x: hidden;
   min-height: calc(100vh - $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT);
-  padding: 40px 0 !important;
+  padding: 80px 0 !important;
 
   @media (max-width: 768px) {
     background: #e3d7c2;
@@ -19,6 +19,6 @@ html {
   @include devices(md) {
     // min-height: auto;
     padding: 60px 0;
-    margin-bottom: 140px + $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT_MD;
+    margin-bottom: 105px - $FM_FOOTER_HEIGHT_MD;
   }
 }
