--- a/rider/src/theme/_variables.scss
+++ b/rider/src/theme/_variables.scss
@@ -1,8 +1,24 @@
 // Header
 $FM_HEADER_HEIGHT: 90px;
 $FM_HEADER_HEIGHT_MD: 60px;
+$FM_HEADER_BASIC_HEIGHT_MD: 90px;
 $FM_HEADER_HEIGHT_XS: 50px;
+$FM_HEADER_BASIC_HEIGHT_XS: 85px;
 
 // Footer
 $FM_FOOTER_HEIGHT: 65px;
-$FM_FOOTER_HEIGHT_MD: 197px;
+$FM_FOOTER_HEIGHT_MD: 134px;
+$FM_FOOTER_HEIGHT_XS: 124px;
+
+// Colors & shadows
+$FM_TEXT_BROWN: #61481c;
+$FM_TEXT_RED: #cc3535;
+$FM_BG_BROWN: #e3d7c2;
+$FM_BG_YELLOW: #e6b325;
+$FM_SHADOW: 0px 2px 2px rgba(0, 0, 0, 0.25);
+$FM_TITLE_SHADOW: 0px 2px 2px rgba(0, 0, 0, 0.25);
+$FM_TEXT_SHADOW: 1px 1px 1px rgba(0, 0, 0, 0.5);
+$FM_BUTTON_SHADOW: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+// Transitions
+$FM_TRANSITION: all 0.3s ease-in-out;
