--- a/rider/src/components/Registration/RegistrationForm.module.scss
+++ b/rider/src/components/Registration/RegistrationForm.module.scss
@@ -153,7 +153,7 @@
 input {
   background: #f8f2e9;
   border: 1px solid rgba(97, 72, 28, 0.5);
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+  // box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   margin-bottom: 10px;
   padding: 8px 40px 5px;
