--- a/customer/src/components/Register/RegisterForm.module.scss
+++ b/customer/src/components/Register/RegisterForm.module.scss
@@ -3,9 +3,9 @@
 
 .formInnerContainer {
   background: rgba(198, 174, 133, 0.5);
-  border-radius: 15px;
+  border-radius: 5px;
   margin-bottom: 20px;
-  padding: 40px;
+  padding: 20px 40px;
 
   @include devices(md) {
     border-radius: 5px;
@@ -50,7 +50,7 @@
     border: 1px solid rgba(97, 72, 28, 0.5);
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding: 15px 10px 5px;
     transition: all 0.3s ease-in-out;
 
@@ -95,6 +95,7 @@
       line-height: 1;
       position: initial;
       margin-left: 10px;
+      opacity: 1;
     }
 
     @include devices(md) {
