--- a/rider/src/components/Account/History/OrderHistoryContainer.module.scss
+++ b/rider/src/components/Account/History/OrderHistoryContainer.module.scss
@@ -4,10 +4,29 @@
 .container {
   min-height: calc(100vh - $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT);
   padding: 40px 0;
+  @include devices(md) {
+    min-height: auto;
+    margin-bottom: -285px + $FM_FOOTER_HEIGHT_MD;
+  }
+  @media (max-width: 767px) {
+    background-color: #fdf5e7;
+  }
 }
 
-.navigationContainer,
-.contentContainer {
+// .navigationContainer,
+// .contentContainer {
+//   background: #f2f2f2;
+//   border: 1px solid #000000;
+//   height: 100%;
+//   padding: 30px 20px;
+// }
+
+// .contentContainer {
+//   background-color: #fdf5e7;
+//   padding: 30px 0;
+// }
+
+.navigationContainer {
   background: #f2f2f2;
   border: 1px solid #000000;
   height: 100%;
@@ -15,6 +34,23 @@
 }
 
 .contentContainer {
+  @media (min-width: 768px) {
+    border: 1px solid #000000;
+    height: 100%;
+    padding: 30px 20px;
+  }
+}
+
+.contentContainer {
   background-color: #fdf5e7;
   padding: 30px 0;
+  @media (max-width: 768px) {
+    height: 800px;
+  }
+}
+
+.bg {
+  @media (max-width: 425px) {
+    background-color: #fdf5e7;
+  }
 }
