--- a/rider/src/components/Account/History/OrderHistoryContent.scss
+++ b/rider/src/components/Account/History/OrderHistoryContent.scss
@@ -1,35 +1,66 @@
 .order-history-container {
-  .button-container {
-    width: 359px;
-    height: 766px;
-    background: #f2f2f2;
-    border: 1px solid #000000;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 40px;
-    padding: 40px;
-
-    a {
-      background: #dddcdc;
-      padding: 1em 2em;
-      border: 0.5px solid #61481c;
-      border-radius: 10px;
-      text-decoration: none;
-      color: black;
-      font-weight: 300;
-      font-size: 18px;
-      cursor: pointer;
-      width: 300px;
-      text-align: center;
-    }
-  }
-
   .table-container-history {
     .table-header {
       padding: 20px;
       display: flex;
       justify-content: space-between;
+
+      @media (max-width: 425px) {
+        padding: 0px;
+      }
+      .table-header-1 {
+        @media (max-width: 425px) {
+          display: flex;
+          align-items: center;
+          gap: 120px;
+        }
+        @media (width: 320px) {
+          display: flex;
+          align-items: center;
+          gap: 30px;
+        }
+
+        h3 {
+          @media (max-width: 425px) {
+            font-size: 15px;
+            padding-top: 10px;
+          }
+          @media (width: 320px) {
+            font-size: 15px;
+            padding-top: 10px;
+          }
+        }
+
+        .search {
+          input {
+            @media (max-width: 425px) {
+              width: 140px;
+              height: 20px;
+            }
+            @media (width: 375px) {
+              width: 120px;
+              height: 20px;
+            }
+            @media (width: 320px) {
+              width: 140px;
+              height: 20px;
+            }
+          }
+
+          img {
+            @media (max-width: 425px) {
+              width: 20px;
+              height: 20px;
+              top: 5px;
+            }
+            @media (width: 320px) {
+              width: 20px;
+              height: 20px;
+              top: 5px;
+            }
+          }
+        }
+      }
 
       h3 {
         margin-left: 20px;
@@ -91,83 +122,282 @@
         }
       }
     }
+  }
+}
 
-    table {
-      border-collapse: separate;
-      border-spacing: 0 15px;
+.order-delivery-container {
+  .order-id {
+    background: #a47e3b;
+    border: 0.5px solid #61481c;
+    border-radius: 2px;
+    width: 85px;
+    height: 22px;
+    font-weight: 900;
+    font-size: 10px;
+    line-height: 20px;
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+  }
+  .order-items {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 90px;
+    font-weight: 900;
+    font-size: 10px;
+    line-height: 20px;
+    text-align: center;
+    color: black;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+    overflow-y: scroll;
+
+    ul:before {
+      content: attr(aria-label);
+      font-size: 10px;
+      font-weight: bold;
+      margin-left: -29px;
+      text-align: center;
     }
 
-    thead {
-      background: #61481c;
-      text-align: center;
-      font-style: normal;
+    li {
+      list-style: none;
       font-weight: 300;
-      font-size: 15px;
-      line-height: 17px;
-      color: white;
+      font-size: 10px;
+      line-height: 10px;
+      margin-left: -29px;
+    }
+  }
+  .delivery-fee {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 30px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 13px;
+    text-align: center;
+
+    span {
+      font-weight: 900;
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+  .grand-total {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 30px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 13px;
+    text-align: center;
+
+    span {
+      font-weight: 900;
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+  .customer-info {
+    background: #fde9b1;
+    border: 1px solid #61481c;
+    border-radius: 0px 5px 5px 5px;
+    width: 262px;
+    height: 185px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    @media (width: 320px) {
+      width: 189px;
     }
 
-    tbody {
-      background: #fde9b1;
-      border: 1px solid #000000;
-    }
+    li {
+      font-weight: 250;
+      font-size: 10px;
+      line-height: 13px;
+      list-style: none;
 
-    th,
-    td {
-      width: 150px;
-      text-align: center;
-      border-top: 1px solid black;
-      padding: 5px;
+      span {
+        font-weight: 300;
+        font-size: 10px;
+        line-height: 13px;
+      }
+      img {
+        margin-left: 2px;
+        width: 15%;
+      }
     }
-
-    .page-number {
+    .decline-accept {
       display: flex;
-      align-items: center;
       justify-content: center;
-      margin-top: 40px;
+      align-items: center;
+      gap: 2px;
+      font-size: 8px;
+      margin-top: 5px;
 
-      .page-turn {
-        cursor: pointer;
-        text-decoration: none;
-        color: black;
+      a {
+        background: black;
+        padding: 0.1em 1em;
+        border: 0.5px solid #61481c;
+        border-radius: 3px;
+        color: #f0bb62;
       }
     }
   }
 }
+//
+.order-delivery-container-desktop {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 
-table {
-  border-collapse: separate;
-  border-spacing: 0 15px;
-}
+  @media (max-width: 767px) {
+    display: none;
+  }
 
-thead {
-  background: #61481c;
-  text-align: center;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 15px;
-  line-height: 17px;
-  color: white;
-}
+  .order-id {
+    background: #a47e3b;
+    border: 0.5px solid #61481c;
+    border-radius: 2px;
+    width: 105px;
+    height: 42px;
+    font-weight: 900;
+    font-size: 10px;
+    line-height: 38px;
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+  }
+  .order-items {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 90px;
+    font-weight: 900;
+    font-size: 10px;
+    line-height: 20px;
+    text-align: center;
+    color: black;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
 
-tbody {
-  background: #fde9b1;
-  border: 1px solid #000000;
-}
+    ul:before {
+      content: attr(aria-label);
+      font-size: 10px;
+      font-weight: bold;
+      margin-left: -29px;
+      text-align: center;
+    }
 
-th,
-td {
-  width: 150px;
-  text-align: center;
-  border-top: 1px solid black;
-  padding: 5px;
+    li {
+      list-style: none;
+      font-weight: 300;
+      font-size: 10px;
+      line-height: 10px;
+      margin-left: -29px;
+    }
+  }
+  .delivery-fee {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 30px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 13px;
+    text-align: center;
+
+    span {
+      font-weight: 900;
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+  .grand-total {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 30px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 13px;
+    text-align: center;
+
+    span {
+      font-weight: 900;
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+  .customer-info {
+    background: #fde9b1;
+    border: 1px solid #61481c;
+    border-radius: 0px 5px 5px 5px;
+    width: 562px;
+    height: 185px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    @media (width: 320px) {
+      width: 189px;
+    }
+
+    li {
+      font-weight: 250;
+      font-size: 10px;
+      line-height: 13px;
+      list-style: none;
+
+      span {
+        font-weight: 300;
+        font-size: 10px;
+        line-height: 13px;
+      }
+      img {
+        margin-left: 2px;
+        width: 8%;
+      }
+    }
+    .decline-accept {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 2px;
+      font-size: 8px;
+      margin-top: 5px;
+
+      a {
+        background: black;
+        padding: 0.1em 1em;
+        border: 0.5px solid #61481c;
+        border-radius: 3px;
+        color: #f0bb62;
+      }
+    }
+  }
 }
+//
 
 .delivery-buttons {
   display: flex;
-  align-items: center;
   justify-content: center;
-  gap: 100px;
+  gap: 10px;
+  margin-top: 50px;
+
+  @media (max-width: 425px) {
+    // margin-top: 270px;
+  }
 
   a {
     background: #d9d9d9;
@@ -179,5 +409,51 @@ td {
     font-size: 15px;
     line-height: 15px;
     cursor: pointer;
+
+    @media (max-width: 425px) {
+      font-size: 10px;
+    }
   }
 }
+
+// .rewards-container {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   width: 100%;
+//   .rewards-btn {
+//     color: white;
+//     margin-top: 50px;
+//     position: relative;
+//     a {
+//       background: #e6b325;
+//       border: 1px solid #61481c;
+//       border-radius: 5px;
+//       padding: 1em 7em;
+//       font-weight: 700;
+//       font-size: 18px;
+//       line-height: 24px;
+//       margin-top: 40px;
+//       cursor: pointer;
+
+//       @media (max-width: 425px) {
+//         font-size: 12px;
+//         padding: 0.5em 3em;
+//       }
+//     }
+//     img {
+//       position: absolute;
+//       width: 30px;
+//       height: 30px;
+//       top: -2px;
+//       right: 50px;
+
+//       @media (max-width: 425px) {
+//         top: 4px;
+//         right: 8px;
+//         width: 20px;
+//         height: 20px;
+//       }
+//     }
+//   }
+// }
