Customer - Order History UI revision

--- a/customer/src/App.scss
+++ b/customer/src/App.scss
@@ -59,11 +59,8 @@ body {
 }
 
 .custom-bg {
-  @include devices(md) {
-    header,
-    .page {
-      background: #e3d7c2;
-    }
+  .page {
+    background: $FM_BG_LIGHT_BROWN;
   }
 }
 
