--- a/customer/src/components/Account/Orders/OrdersContainer.module.scss
+++ b/customer/src/components/Account/Orders/OrdersContainer.module.scss
@@ -4,4 +4,15 @@
 .container {
   min-height: calc(100vh - $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT);
   padding: 40px 0;
+  margin: 0 20px;
+
+  @include devices(md) {
+    min-height: calc(100vh - $FM_HEADER_HEIGHT_MD - $FM_FOOTER_HEIGHT_MD);
+    margin: 0;
+    padding: 20px 0;
+  }
+
+  @include devices(xs) {
+    min-height: calc(100vh - $FM_HEADER_HEIGHT_XS - $FM_FOOTER_HEIGHT_XS);
+  }
 }
