--- a/customer/src/theme/_variables.scss
+++ b/customer/src/theme/_variables.scss
@@ -14,6 +14,7 @@ $FM_FOOTER_HEIGHT_XS: 124px;
 $FM_TEXT_BROWN: #61481c;
 $FM_TEXT_RED: #cc3535;
 $FM_BG_BROWN: #e3d7c2;
+$FM_BG_LIGHT_BROWN: #fdf5e7;
 $FM_BG_YELLOW: #e6b325;
 $FM_BG_GRAY: #d9d5d5;
 $FM_SHADOW: 0px 2px 2px rgba(0, 0, 0, 0.25);
