Updated rider profile API

--- a/rider/src/components/Account/Profile/ProfileContainer.module.scss
+++ b/rider/src/components/Account/Profile/ProfileContainer.module.scss
@@ -28,7 +28,9 @@
 }
 
 .contentContainer {
-  background-color: #fdf5e7;
+  // background-color: #fdf5e7;
+  border: none;
+  background: none;
 
   @media (max-width: 768px) {
     background: none;
