--- a/rider/src/components/Account/Profile/ProfileContent.scss
+++ b/rider/src/components/Account/Profile/ProfileContent.scss
@@ -3,7 +3,7 @@
     text-align: center;
   }
   .right h3 {
-    padding: 15px;
+    // padding: 15px;
 
     @media (max-width: 768px) {
       padding: 0;
@@ -14,7 +14,7 @@
   .right form {
     left: 0px;
     top: 0px;
-    padding: 20px;
+    // padding: 20px;
 
     @media (max-width: 768px) {
       padding: 0px;
@@ -104,7 +104,8 @@
   .bike-images {
     padding-top: 20px;
     padding-bottom: 20px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 80px 80px;
     gap: 10px;
 
     @media (max-width: 768px) {
