--- a/rider/src/components/Account/Profile/ProfileContent.scss
+++ b/rider/src/components/Account/Profile/ProfileContent.scss
@@ -14,7 +14,7 @@
   .right form {
     left: 0px;
     top: 0px;
-    // padding: 20px;
+    padding: 20px;
 
     @media (max-width: 768px) {
       padding: 0px;
@@ -77,6 +77,8 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     text-decoration: none;
+    font-size: 12px;
+    text-transform: uppercase;
 
     @media (max-width: 425px) {
       // padding: 0.5em 2em;
@@ -87,13 +89,15 @@
   .right .buttons #saveBtn {
     background: #d9d9d9;
     // padding: 1em 5em;
-    width: 100px;
+    width: 150px;
     color: black;
 
     border: 0.5px solid rgba(97, 72, 28, 0.5);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     text-decoration: none;
+    font-size: 12px;
+    text-transform: uppercase;
 
     @media (max-width: 425px) {
       // padding: 0.5em 2em;
@@ -104,14 +108,20 @@
   .bike-images {
     padding-top: 20px;
     padding-bottom: 20px;
+    padding-left: 100px;
     display: grid;
-    grid-template-columns: 80px 80px;
+    grid-template-columns: 80px 90px;
     gap: 10px;
+
+    @media (width: 1024px) {
+      padding-left: 70px;
+    }
 
     @media (max-width: 768px) {
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 20px;
     }
     img {
       width: 80px;
@@ -124,6 +134,19 @@
         width: 74px;
         height: 70px;
       }
+    }
+
+    button {
+      width: 120px;
+      background: #d9d9d9;
+      border: 0.5px solid rgba(97, 72, 28, 0.5);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 15px;
+      text-transform: uppercase;
+      color: black;
     }
   }
 }
