Updated Delivery Page UI, phase 2

--- a/rider/src/components/Account/Delivery/DeliveryContent.module.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContent.module.scss
@@ -1,6 +1,6 @@
-.delivery-container {
-  .table-container-history {
-    .table-header {
+.deliveryContainer {
+  .tableContainerHistory {
+    .tableHeader {
       padding: 20px;
       display: flex;
       justify-content: space-between;
@@ -8,7 +8,7 @@
       @media (max-width: 425px) {
         padding: 0px;
       }
-      .table-header-1 {
+      .tableHeader1 {
         @media (max-width: 425px) {
           display: flex;
           align-items: center;
@@ -101,7 +101,7 @@
         right: 12px;
       }
 
-      .table-header-buttons {
+      .tableHeaderButtons {
         display: grid;
         grid-template-columns: auto auto;
         align-items: center;
@@ -124,9 +124,117 @@
     }
   }
 }
+//New Design-mobile
+.forDelivery {
+  .orderIdBtn {
+    background: #a47e3b;
+    border: 0.5px solid #61481c;
+    border-radius: 2px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    text-transform: uppercase;
 
-.order-delivery-container {
-  .order-id {
+    cursor: pointer;
+  }
+  .active,
+  .orderIdBtn:hover {
+    background-color: #555;
+  }
+
+  .detailsBtn {
+    background: #e6b325;
+    border: 0.5px solid #61481c;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+    font-weight: 700;
+    font-size: 8px;
+    line-height: 16px;
+    text-transform: uppercase;
+  }
+
+  .deliveryDetails {
+    background: #e4e4e4;
+    border: 1px solid #61481c;
+    border-radius: 0px 5px 5px 5px;
+    // margin-left: 12px;
+    margin-top: 5px;
+    width: 348px;
+    height: 110px;
+
+    p {
+      font-weight: 250;
+      font-size: 10px;
+      line-height: 13px;
+    }
+    span {
+      font-weight: 600;
+      font-size: 10px;
+      line-height: 13px;
+    }
+  }
+  .deliveryDetails2 {
+    background: white;
+    border: 1px solid #61481c;
+    border-radius: 0px 5px 5px 5px;
+    // margin-left: 12px;
+    margin-top: 5px;
+    width: 348px;
+    height: 510px;
+
+    p {
+      font-weight: 250;
+      font-size: 10px;
+      line-height: 13px;
+    }
+    span {
+      font-weight: 600;
+      font-size: 10px;
+      line-height: 13px;
+    }
+    li {
+      margin-left: 10px;
+      list-style: none;
+      font-weight: 600;
+      font-size: 10px;
+      line-height: 13px;
+    }
+    .resto {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      img {
+        width: 70px;
+      }
+    }
+    .status {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      img {
+        width: 50px;
+      }
+    }
+    .declineAccept {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+
+      button {
+        background: #000000;
+        width: 100px;
+        border-radius: 5px;
+        color: #e6b325;
+      }
+    }
+  }
+}
+//
+.orderDeliveryContainer {
+  .orderId {
     background: #a47e3b;
     border: 0.5px solid #61481c;
     border-radius: 2px;
@@ -139,7 +247,7 @@
     color: #ffffff;
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
   }
-  .order-items {
+  .orderItems {
     background: #d9d9d9;
     border: 1px solid #525252;
     border-radius: 5px;
@@ -169,7 +277,7 @@
       margin-left: -29px;
     }
   }
-  .delivery-fee {
+  .deliveryFee {
     background: #d9d9d9;
     border: 1px solid #525252;
     border-radius: 5px;
@@ -186,7 +294,7 @@
       line-height: 16px;
     }
   }
-  .grand-total {
+  .grandTotal {
     background: #d9d9d9;
     border: 1px solid #525252;
     border-radius: 5px;
@@ -203,7 +311,7 @@
       line-height: 16px;
     }
   }
-  .customer-info {
+  .customerInfo {
     background: #fde9b1;
     border: 1px solid #61481c;
     border-radius: 0px 5px 5px 5px;
@@ -242,7 +350,7 @@
         }
       }
     }
-    .decline-accept {
+    .declineAccept {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -261,7 +369,7 @@
   }
 }
 //
-.order-delivery-container-desktop {
+.orderDeliveryContainerDesktop {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -270,7 +378,7 @@
     display: none;
   }
 
-  .order-id {
+  .orderId {
     background: #a47e3b;
     border: 0.5px solid #61481c;
     border-radius: 2px;
@@ -283,7 +391,7 @@
     color: #ffffff;
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
   }
-  .order-items {
+  .orderItems {
     background: #d9d9d9;
     border: 1px solid #525252;
     border-radius: 5px;
@@ -312,7 +420,7 @@
       margin-left: -29px;
     }
   }
-  .delivery-fee {
+  .deliveryFee {
     background: #d9d9d9;
     border: 1px solid #525252;
     border-radius: 5px;
@@ -329,7 +437,7 @@
       line-height: 16px;
     }
   }
-  .grand-total {
+  .grandTotal {
     background: #d9d9d9;
     border: 1px solid #525252;
     border-radius: 5px;
@@ -346,7 +454,7 @@
       line-height: 16px;
     }
   }
-  .customer-info {
+  .customerInfo {
     background: #fde9b1;
     border: 1px solid #61481c;
     border-radius: 0px 5px 5px 5px;
@@ -382,7 +490,7 @@
         }
       }
     }
-    .decline-accept {
+    .declineAccept {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -402,7 +510,7 @@
 }
 //
 
-.bottom-buttons {
+.bottomButtons {
   display: flex;
   justify-content: center;
   gap: 10px;
@@ -429,12 +537,12 @@
   }
 }
 
-.rewards-container {
+.rewardsContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  .rewards-btn {
+  .rewardsBtn {
     color: white;
     margin-top: 30px;
     position: relative;
@@ -471,7 +579,7 @@
   }
 }
 
-.modal-content {
+.modalContent {
   background-color: #e3d7c2 !important;
 }
 
