--- a/rider/src/components/Registration/RegistrationForm.module.scss
+++ b/rider/src/components/Registration/RegistrationForm.module.scss
@@ -164,21 +164,21 @@ input {
   }
 }
 
-button {
-  background: #e6b325;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border: none;
-  border-radius: 5px;
-  color: #61481c;
-  font-size: 20px;
-  padding: 10px 100px;
-  width: 250px;
+// button {
+//   background: #e6b325;
+//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+//   border: none;
+//   border-radius: 5px;
+//   color: #61481c;
+//   font-size: 20px;
+//   padding: 10px 100px;
+//   width: 250px;
 
-  &:hover {
-    background: #a47e3b;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
-}
+//   &:hover {
+//     background: #a47e3b;
+//     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+//   }
+// }
 
 .errors {
   color: red;
