--- a/rider/src/components/Account/Delivery/DeliveryContainer.module.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContainer.module.scss
@@ -26,18 +26,20 @@
 
 .contentContainer {
   @media (min-width: 768px) {
-    border: 1px solid #000000;
+    // border: 1px solid #000000;
     height: 100%;
-    padding: 30px 20px;
+    // padding: 30px 20px;
+    padding: 0;
   }
 }
 
 .contentContainer {
-  background-color: #fdf5e7;
-  padding: 30px 0;
+  // background-color: #fdf5e7;
+
   @media (max-width: 768px) {
     height: 800px;
     background: none;
+    padding: 30px 0;
   }
 }
 
