--- a/customer/src/components/Account/Orders/OrderDetailsContent.module.scss
+++ b/customer/src/components/Account/Orders/OrderDetailsContent.module.scss
@@ -23,7 +23,7 @@
 }
 
 .innerContainer {
-  margin: 30px 0 0;
+  // margin: 30px 0 0;
 
   .btnBack {
     text-align: center;
@@ -86,11 +86,11 @@
 
 .orderDetails {
   font-size: 14px;
-  margin-bottom: 25px;
-  padding-bottom: 25px;
 
   &:not(:last-child) {
     border-bottom: 1px solid #000000;
+    margin-bottom: 25px;
+    padding-bottom: 25px;
   }
 
   .value,
@@ -148,6 +148,10 @@
   img {
     object-fit: contain;
     max-width: 80px;
+  }
+
+  .value {
+    text-transform: capitalize;
   }
 
   @include devices(xs) {
