Customer - OTP (order) page, UI revisions & optimizations

--- a/customer/src/components/Restaurant/MenuSlider.module.scss
+++ b/customer/src/components/Restaurant/MenuSlider.module.scss
@@ -15,12 +15,13 @@
 }
 
 .slideImageContainer {
+  background-color: #ffffff;
   border-bottom: 2px solid $FM_TEXT_BROWN;
 
   img {
     width: 100%;
     height: 150px;
-    object-fit: cover;
+    object-fit: contain;
 
     &.placeholder {
       object-fit: contain;
